# libchess

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: perft.cpp  split.cpp  suite.cpp  suite960.cpp  tt.hpp  ttperft.cpp  ttsuite.cpp
src/: attackers.cpp  check_evasions.cpp  checkers.cpp  count_moves.cpp  get_fen.cpp  is_legal.cpp  king_allowed.cpp  legal_captures.cpp  legal_moves.cpp  legal_noncaptures.cpp  makemove.cpp  movegen.cpp  pawn_moves_black.cpp  pawn_moves_white.cpp  perft.cpp  pinned.cpp  predict_hash.cpp  promotions_black.cpp  promotions_white.cpp  set_fen.cpp  square_attacked.cpp  squares_attacked.cpp  undomove.cpp  valid.cpp  zobrist.cpp
src/libchess/: bitboard.hpp  move.hpp  movegen.hpp  piece.hpp  position.hpp  side.hpp  square.hpp  zobrist.hpp
tests/: checkers.cpp  consistency.cpp  count_attackers.cpp  draw.cpp  fen.cpp  hash.cpp  in_check.cpp  is_capture.cpp  is_checkmate.cpp  is_legal.cpp  is_stalemate.cpp  iterator.cpp  legal_moves.cpp  move.cpp  movegen.cpp  parse_move.cpp  passed_pawns.cpp  perft.cpp  pinned.cpp  squares_attacked.cpp
